Course CRUD updated