@@ -7,11 +7,14 @@ import com.app.dao.BatchCycleDao;
 import com.app.dao.CourseDao;
 import com.app.dao.CourseTypeDao;
 import com.app.dao.PremisesDao;
+import com.app.dao.StaffDao;
 import com.app.dto.CourseReqDto;
 import com.app.dto.CourseRespDto;
 import com.app.entity.BatchCycle;
 import com.app.entity.Course;
 import com.app.entity.Premises;
+import com.app.entity.Staff;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -34,15 +37,21 @@ public class CourseServiceImpl implements CourseService{
 	@Autowired
     private final PremisesDao premisesDao;
 	
+	@Autowired
+	private final StaffDao staffDao;
+
+	
 	public CourseServiceImpl(CourseDao courseDao, BatchCycleDao batchCycleDao
-    		,CourseTypeDao courseTypeDao,PremisesDao premisesDao) {
+    		,CourseTypeDao courseTypeDao,PremisesDao premisesDao,StaffDao staffDao) {
         this.courseDao = courseDao;
         this.batchCycleDao = batchCycleDao;
         this.courseTypeDao = courseTypeDao;
         this.premisesDao = premisesDao;
+        this.staffDao = staffDao;
         
     }
 
+	//getall courses
 	public List<CourseRespDto> getAllCourses() {
         List<Course> courses = courseDao.findAll();
         List<CourseRespDto> responseList = new ArrayList<>();
@@ -54,12 +63,13 @@ public class CourseServiceImpl implements CourseService{
         return responseList;
     }
 	
+	//getcourse by id
 	public CourseRespDto getCourseById(int id) {
         Course course = courseDao.findById(id)
                 .orElseThrow(() -> new RuntimeException("Course not found with id " + id));
         return convertToDto(course);
     }
-	
+
 	private CourseRespDto convertToDto(Course course) {
         CourseRespDto dto = new CourseRespDto();
         dto.setId(course.getId());
@@ -92,10 +102,26 @@ public class CourseServiceImpl implements CourseService{
             );
         }
 
+        
+        if (course.getStaff() != null && !course.getStaff().isEmpty()) {
+            dto.setStaffName(course.getStaff().get(0).getName()); // single staff
+        } else {
+            dto.setStaffName("No Coordinator Assigned");
+        }
+
+
+        if (course.getStudents() != null) {
+            dto.setStudentCount(course.getStudents().size());
+        } else {
+            dto.setStudentCount(0);
+        }
+
+
         return dto;
     }
 
 	
+	//add new course
 	public CourseRespDto addCourse(CourseReqDto dto) {
         Course course = new Course();
         course.setName(dto.getName());
@@ -107,22 +133,29 @@ public class CourseServiceImpl implements CourseService{
                         .orElseThrow(() -> new RuntimeException("BatchCycle not found with id: " + dto.getBatchCycleId()))
         );
         
-        
         course.setCourseType(courseTypeDao.findById(dto.getCourseTypeId())
                 .orElseThrow(() -> new RuntimeException("CourseType not found")));
         
-        
+
         List<Premises> premises = dto.getPremisesId().stream()
         		.map(id -> premisesDao.findById(id).orElseThrow(() -> new RuntimeException("Premises not found")))
-        		.toList();
+        		.collect(Collectors.toList());
         course.setPremisesList(premises);
         
+
+        Staff staff = staffDao.findById(dto.getStaffId())
+                .orElseThrow(() -> new RuntimeException("Staff not found"));
+        course.setStaff(new ArrayList<>(List.of(staff)));
+	
+        
         Course saved = courseDao.save(course);
+
         return convertToDto(saved);
 
     }
 	
 	
+	//update existing course
 	public CourseRespDto updateCourse(int id, CourseReqDto dto) {
         Course course = courseDao.findById(id).orElseThrow();
         course.setName(dto.getName());
@@ -139,13 +172,20 @@ public class CourseServiceImpl implements CourseService{
         		.map(pId -> premisesDao.findById(pId).orElseThrow(() -> new RuntimeException("Premises not found")))
         		.collect(Collectors.toList());
         course.setPremisesList(premises);
-                
+        
+        
+        Staff staff = staffDao.findById(dto.getStaffId())
+                .orElseThrow(() -> new RuntimeException("Staff not found"));
+        course.setStaff(new ArrayList<>(List.of(staff)));
+
+       
         Course updated = courseDao.save(course);
         
         return convertToDto(updated);
 
     }
 	
+	//delete course
 	public String deleteCourse(int id) {
 		 courseDao.deleteById(id);
 		 return "Deleted succeessfully";
